# note-research-team-helm

./: .dockerignore  .env.example  .gitignore  ArgoCD學習筆記.md  CLAUDE.md  Chart.yaml  Dockerfile  app.py  helm-deploy.sh  index.html  pyproject.toml  requirements.txt  requirements_web.txt  test_notion.py  tls.crt  tls.key  values.yaml
.agent/skills/crewai/: SKILL.md
.agent/skills/crewai/references/: custom_tools.md  flows.md
.github/workflows/: ci.yaml
src/note_research_team/: __init__.py  crew.py  main.py
src/note_research_team/config/: agents.yaml  tasks.yaml
src/note_research_team/tools/: __init__.py  notion_tool.py
templates/: configmap.yaml  deployment.yaml  ingress.yaml  middleware-redirect-https.yaml  my-sealed-secret.yaml  my-tls-sealed-secret.yaml  secret.yaml  service.yaml
